# OWL-RS

./: .env.example  .gitignore  Cargo.toml  README.md  Spezifikation.md
benches/nrese-bench-harness/: Cargo.toml
benches/nrese-bench-harness/fixtures/catalog/: ontologies.toml
benches/nrese-bench-harness/fixtures/compat/: limit_semantics_cases.json  ontology_protocol_cases.json  policy_failure_cases.json  protocol_cases.json  rdf_xml_protocol_cases.json  secured_auth_failure_cases.json  timeout_failure_cases.json
benches/nrese-bench-harness/fixtures/datasets/: comparison_seed.ttl
benches/nrese-bench-harness/fixtures/live/: connection-profiles.template.toml
benches/nrese-bench-harness/fixtures/workloads/: comparison_query_workload.json  ontology_query_workload.json  query_workload.json  update_workload.json
benches/nrese-bench-harness/src/: cli.rs  compat_common.rs  compat_graph_store.rs  compat_query.rs  compat_update.rs  connection_profile.rs  interpolation.rs  io.rs  layout.rs  main.rs  model.rs  normalize.rs  pack_validation.rs  payloads.rs  runner.rs
crates/nrese-server/: Cargo.toml
crates/nrese-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  rate_limit.rs  reasoning_runtime.rs  reject_attribution.rs  reject_view.rs  state.rs  tell_pipeline.rs  update_pipeline.rs
crates/nrese-server/src/ai/: client.rs  config.rs  gemini.rs  json.rs  mod.rs  openrouter.rs  prompt.rs  service.rs  types.rs
crates/nrese-server/src/auth/: bearer_jwt.rs  bearer_static.rs  grants.rs  mod.rs  mtls.rs  oidc_introspection.rs
crates/nrese-server/src/config/: ai_env.rs  auth_env.rs  cli.rs  env_names.rs  env_values.rs  policy_env.rs  reasoner_env.rs  source.rs  store_env.rs  test_support.rs
crates/nrese-server/src/http/: admin_dataset.rs  ai.rs  console.rs  graph_store.rs  guard.rs  handlers.rs  media.rs  metrics.rs  mod.rs  operator_api.rs  operator_ui.html  (+9 more)
crates/nrese-server/tests/: admin_backup_api_tests.rs  catalog_ontology_api_tests.rs  console_ai_api_tests.rs  graph_store_api_tests.rs  http_api_tests.rs  policy_api_tests.rs  recovery_safety_tests.rs  tell_api_tests.rs  update_safety_tests.rs
crates/nrese-store/: Cargo.toml
crates/nrese-store/src/: backend.rs  backup.rs  config.rs  error.rs  graph_store.rs  graph_store_executor.rs  lib.rs  loader.rs  on_disk.rs  query.rs  query_executor.rs  rdf_io.rs  service.rs  snapshot.rs  staging.rs  stats.rs  tell.rs  update.rs  update_executor.rs
crates/nrese-store/tests/: backup_restore_tests.rs  catalog_ontology_store_tests.rs  mutation_safety_tests.rs  store_service_tests.rs  update_safety_tests.rs
(+183 files in other folders)
