[workspace]
members = [
    "crates/nrese-core",
    "crates/nrese-store",
    "crates/nrese-reasoner",
    "crates/nrese-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
