[package]
name = "nrese-bench-harness"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

[dependencies]
anyhow = "1.0.100"
nrese-store = { path = "../../crates/nrese-store" }
oxigraph = { version = "0.5.6", default-features = false }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.12"

[dev-dependencies]
tempfile = "3.23.0"
