[package]
name = "nrese-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
durable-storage = ["oxigraph/rocksdb"]

[dependencies]
nrese-core = { path = "../nrese-core" }
oxigraph = { version = "0.5.6", default-features = false }
sha2 = "0.10.9"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
